lab-microseg/manifests/honeypod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: honeypod
  namespace: app
spec:
  containers:
  - name: honeypot
    image: nicolaka/netshoot
    command: ["sleep","3600"]
